--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node script.js",
     "build": "rollup -c rollup.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava"
   },
   "author": "Tadeusz Piskozub",
   "license": "UNLICENSED",
@@ -17,14 +17,16 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^11.1.1",
     "@rollup/plugin-typescript": "^8.1.0",
-    "@snowpack/plugin-typescript": "^1.2.1",
     "@types/lodash": "^4.14.168",
+    "@types/node": "^14.14.22",
+    "ava": "^3.15.0",
     "rollup": "^2.38.0",
-    "snowpack": "^3.0.11",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "tslib": "^2.1.0"
   }
 }
