--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,14 @@
 {
   "compilerOptions": {
-    "esModuleInterop": true
-  }
+    "module": "es6",
+    "target": "es5",
+    "lib": [ "es2015" ],
+    "outDir": "lib",
+    "declaration": true,
+    "moduleResolution": "node",
+  },
+  "exclude": [
+    "node_modules",
+    "lib/**/*"
+  ],
 }
