--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "tslib": "^2.1.0"
+  },
+  "ava": {
+    "files": ["test/**/*.test.js"]
   }
 }
